WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320769
Subtitles don't always turn on when selecting "On" in the media controls
https://bugs.webkit.org/show_bug.cgi?id=320769
Summary
Subtitles don't always turn on when selecting "On" in the media controls
Joshua Hernandez
Reported
2026-07-31 16:12:07 PDT
Selecting "On" in the media controls captions menu sometimes does nothing. The only way to turn them on is to pick a specific language from the Languages submenu. Once a language is chosen, toggling On/Off works unless you toggle "On" while the subtitles are already "On"
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-07-31 16:12:15 PDT
<
rdar://problem/183776073
>
Joshua Hernandez
Comment 2
2026-07-31 16:41:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70641
EWS
Comment 3
2026-08-03 10:29:32 PDT
Committed
318468@main
(762e22b2a4d4): <
https://commits.webkit.org/318468@main
> Reviewed commits have been landed. Closing PR #70641 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug